# ml-text-classification

./: .gitignore  README.md  config.json  linter  predictor  pyproject.toml  run-linter  run-train  test_tokeniner.py  train
classification/: bert_classifier.py  config.py  dataset.py  main.py  model_evaluator.py  model_trainer.py  prep_data.py  unseen_predictor.py
test/: test_tokeniner.py
tests/: test_tokeniner.py
