[tool.poetry]
name = "ml-text-classification"
version = "1.0.0"
description = "Simple Text Classification Using BERT (Model)"
authors = ["Ederson Corbari <e@neuroquest.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.0.1+cpu", source = "pytorch-cpu-src"}
transformers = {extras = ["torch"], version = "4.33.1"}
isort = "5.12.0"
pandas = "1.5.3"
matplotlib = "^3.8.3"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

